--- a/app/templates/bank_accounts/index.html
+++ b/app/templates/bank_accounts/index.html
@@ -142,7 +142,7 @@
                     <td>{{ bank_account.account_number }}</td>
                     <td>{{ bank_account.nick_name }}</td>
                     <td>{{ bank_account.bank.name }}</td>
-                    <td>{{ bank_account.amount_available }}</td>
+                    <td>{{ format_amount(bank_account.amount_available) }}</td>
                     <td>{{ bank_account.is_active }}</td>
                     <td>{{ bank_account.created_at }}</td>
                     <td>
