add event listener to filterInput on keydown

--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -279,6 +279,7 @@
 <script src="{{ url_for('static', filename='scripts/accounts_receivable/script.js') }}"></script>
 <script type="module" src="{{ url_for('static', filename='scripts/accounts_receivable/filterData.js') }}"></script>
 <script type="module" src="{{ url_for('static', filename='scripts/utils/numericHandling.js' ) }}"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
 
 <script> 
     document.addEventListener('DOMContentLoaded', () => {
