--- a/app/templates/cashledger/index.html
+++ b/app/templates/cashledger/index.html
@@ -43,7 +43,7 @@
                     <tr>
                         <th scope="row">{{ ledger.id }}</th>
                         <td>{{ ledger.reference_code }}</td>
-                        <td class="text-start">{{ ledger.type | lower | title }}</td>
+                        <td class="text-start">{{ ledger.type | replace('_', ' ') | lower | title }}</td>
                         <td class="text-start">{{ ledger.amount }}</td>
                         <td>{{ ledger.created_at }}</td>
                     </tr>
@@ -62,6 +62,8 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
 <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
-<script src="{{ url_for('static', filename='scripts/cashledger/filterData.js' ) }}"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/cashledger/filterData.js' ) }}"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
+
 
 {% endblock %}
