--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -199,6 +199,7 @@
 
 <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
 <script type="module" src="{{ url_for('static', filename='scripts/utils/numericHandling.js' ) }}"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
 <script type="module" src="{{ url_for('static', filename='scripts/incomes/filterData.js' ) }}"></script>
 
 <script> 
