--- a/app/templates/withdrawals/index.html
+++ b/app/templates/withdrawals/index.html
@@ -182,7 +182,8 @@
 
 <script type="module" src="{{ url_for('static', filename='scripts/utils/numericHandling.js') }}"></script>
 <script type="module" src="{{ url_for('static', filename='scripts/withdrawals/filterData.js') }}"></script>
-
+<script type="module" src="{{ url_for('static', filename='scripts/utils/asyncHanlding.js' ) }}"></script>
+<script type="module" src="{{ url_for('static', filename='scripts/utils/stringHandling.js' ) }}"></script>
 
 <script> 
     document.addEventListener('DOMContentLoaded', () => {
