Icon for transfer buttons

--- a/app/templates/bank_accounts/index.html
+++ b/app/templates/bank_accounts/index.html
@@ -196,7 +196,7 @@
                                 data-from-bank-account-id="{{ bank_account.id }}"
                                 data-nick-name="{{ bank_account.nick_name }}"
                             >
-                                T
+                                <i class="bi bi-send"></i>
                             </button>
                             <button 
                                 type="button" 
