--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -58,35 +58,33 @@
                 <h4 class="d-flex justify-content-center">Transfers</h4>
             </div>
             <div class="w-100" style="max-width: 217px;">
-                <input type="text" name="filter-input-expense" id="filter-input-expense-id" class="form-control"
+                <input type="text" name="filter-input-transfer" id="filter-input-transfer-id" class="form-control"
                     placeholder="Search...">
             </div>
         </div>
-        <div id="expenses-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
+        <div id="transfer-table-container" class="table-responsive overflow-y-auto" style="max-height: 322px;">
             <table class="table table-borderless table-hover text-start" id="expenses-table">
                 <thead class="sticky-top" >
                     <tr class="table-danger">
                         <th scope="col"># Id</th>
                         <th scope="col">Amount</th>
-                        <th scope="col">Type</th>
                         <th scope="col">Origin</th>
                         <th scope="col">Destination</th>
                         <th scope="col">Create at</th>
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
-                <tbody id="expenses-table-body">
+                <tbody id="transfer-table-body">
                     {% for transfer in banktransfers %}                
                     <tr>
                         <th scope="row">{{ transfer.id }}</th>
                         <td>
                             {% if transfer.to_bank_account.id == bank_account.id %}
-                                {{ format_amount(transfer.amount) }}
+                                <p class="fs-6 text-primary">{{ format_amount(transfer.amount) }}</p>
                             {% else %}
-                                -{{ format_amount(transfer.amount) }}
+                                <p class="fs-6 text-danger">{{ format_amount(transfer.amount) }}</p> 
                             {% endif %}
                         </td>                        
-                        <td>{{ 'OUT' if transfer.from_bank_account.id == bank_account.id else 'IN'  }}</td>
                         <td>{{ '.' if transfer.from_bank_account.id == bank_account.id else transfer.from_bank_account.nick_name }}</td>
                         <td>{{ '.' if transfer.to_bank_account.id == bank_account.id else transfer.to_bank_account.nick_name }}</td>
                         <td>{{ transfer.created_at }}</td>
@@ -120,8 +118,8 @@
         </div>
         <div class="p-2 border rounded-end rounded-bottom w-100 d-flex justify-content-center align-items-center" style="max-width: 200px;">
             <div class="row text-center">
-                <p class="fs-6 fw-bold" id="total-amounts-expenses-id">TOTAL: {{ total_amount(banktransfers) }}</p>
-                <p class="fs-6 fw-bold" id="total-count-expenses-id">RECORDS: {{ banktransfers | length }}</p>
+                <p class="fs-6 fw-bold" id="total-amounts-transfers-id">TOTAL: {{ total_amount(banktransfers) }}</p>
+                <p class="fs-6 fw-bold" id="total-count-transfers-id">RECORDS: {{ banktransfers | length }}</p>
             </div>
         </div>
     </div>
