--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -82,7 +82,7 @@
                             {% if transfer.to_bank_account.id == bank_account.id %}
                                 <p class="fs-6 text-primary">{{ format_amount(transfer.amount) }}</p>
                             {% else %}
-                                <p class="fs-6 text-danger">{{ format_amount(transfer.amount) }}</p> 
+                                <p class="fs-6 text-danger">-{{ format_amount(transfer.amount) }}</p> 
                             {% endif %}
                         </td>                        
                         <td>{{ '.' if transfer.from_bank_account.id == bank_account.id else transfer.from_bank_account.nick_name }}</td>
@@ -140,9 +140,7 @@
                     <tr class="table-danger">
                         <th scope="col"># Id</th>
                         <th scope="col" class="text-start">Amount</th>
-                        <th scope="col">Is Cash</th>
                         <th scope="col" class="text-start">Description</th>
-                        <th scope="col">Credit Card</th>
                         <th scope="col">Bank Account</th>
                         <th scope="col" class="text-start">Category</th>
                         <th scope="col">Create at</th>
@@ -153,9 +151,7 @@
                     <tr>
                         <th scope="row">{{ expense.id }}</th>
                         <td class="text-start">{{ format_amount(expense.amount) }}</td>
-                        <td>{{ 'YES' if expense.is_cash else 'NO' }}</td>
                         <td class="text-start"> {{ expense.description or '-' }} </td>
-                        <td>{{ expense.credit_card.nick_name or '-' }}</td>
                         <td>{{ expense.bank_account.nick_name }}</td>
                         <td class="text-start">{{ expense.expense_category.name }}</td>
                         <td>{{ expense.created_at }}</td>
@@ -188,7 +184,6 @@
                     <tr class="table-info">
                         <th scope="col"># Id</th>
                         <th scope="col" class="text-start">Amount</th>
-                        <th scope="col">Is Cash</th>
                         <th scope="col" class="text-start">Description</th>
                         <th scope="col">Bank Account</th>
                         <th scope="col">Create at</th>
@@ -200,7 +195,6 @@
                     <tr>
                         <th scope="row">{{ income.id }}</th>
                         <td class="text-start">{{ format_amount(income.amount) }}</td>
-                        <td>{{ 'YES' if income.is_cash else 'NO' }}</td>
                         <td class="text-start">{{ income.description if income.description else '-'}}</td>
                         <td>{{ income.bank_account.nick_name }}</td>
                         <td>{{ income.created_at }}</td>
@@ -276,7 +270,6 @@
                     <tr class="table-warning">
                         <th scope="col"># Id</th>
                         <th scope="col" class="text-start">Amount</th>
-                        <th scope="col">Is Cash</th>
                         <th scope="col">Name</th>
                         <th scope="col">Remaining</th>
                         <th scope="col">Status</th>
@@ -291,7 +284,6 @@
                     <tr class="loan-row" data-loan-id="{{ loan.id }}" data-url-associated-records = "{{ url_for('accounts_receivable.associated_records', loan_id=loan.id) }}">
                         <th scope="row">{{ loan.id }}</th>
                         <td class="text-start">{{ format_amount(loan.amount) }}</td>
-                        <td>{{ 'YES' if loan.is_cash else 'NO'  }}</td>
                         <td>{{ loan.person_name }}</td>
                         <td> {{ loan.remaining_amount() }} </td>
                         <td>{{ 'ACTIVE' if loan.is_active else 'PAID'  }}</td>
@@ -327,7 +319,6 @@
                     <tr class="table-success">
                         <th scope="col"># Id</th>
                         <th scope="col" class="text-start">Amount</th>
-                        <th scope="col">Is Cash</th>
                         <th scope="col">Bank Account</th>
                         <th scope="col">Create at</th>
                     </tr>
@@ -337,7 +328,6 @@
                     <tr>
                         <th scope="row">{{ payment.id }}</th>
                         <td class="text-start">{{ format_amount(payment.amount) }}</td>
-                        <td>{{ 'YES' if payment.is_cash else 'NO' }}</td>
                         <td>{{ payment.bank_account.nick_name }}</td>
                         <td>{{ payment.created_at }}</td>
                     </tr>
