--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -50,7 +50,7 @@
     </section>
 
     <h3>{{ bank_account.nick_name }}</h3>
-    <a href="{{ url_for('bank_account.index') }}" class="btn btn-light fs-5"><i class="bi bi-arrow-return-left"></i> Go back</a>
+    <a href="{{ url_for('bank_account.stats', bank_account_id=bank_account.id) }}" class="btn btn-outline-light fs-5"><i class="bi bi-arrow-return-left"></i></a>
 
     <div class="my-3 border rounded-3">
         <div class="rounded-top d-flex align-items-center justify-content-center p-2" style="height: 60px; background-color: #992784;">
