--- a/app/templates/bank_accounts/stats.html
+++ b/app/templates/bank_accounts/stats.html
@@ -28,7 +28,7 @@
     <a href="{{ url_for('bank_account.index') }}" class="btn btn-outline-light fs-5"><i class="bi bi-arrow-return-left"></i></a>
     <a href="{{ url_for('bank_account.associated_records', bank_account_id=bank_account.id ) }}" class="btn btn-outline-primary"><i class="bi bi-diagram-3-fill"></i></a>
 </div>
-<div class="row align-items-stretch">
+<div class="row align-items-stretch text-center">
     <!-- MONTHLY 
     <div class="col-sm d-flex justify-content-center">
         <div class="chart-box">
@@ -37,7 +37,8 @@
     </div> 
     -->
     <!-- YEARLY -->
-    <div class="col-sm d-flex justify-content-center">
+     <h3>Yearly Cash Flow Chart</h3>
+    <div class=" d-flex justify-content-center">
         <div class="chart-box">
             <canvas id="yearly-stats"></canvas>
         </div>
