--- a/app/templates/bank_accounts/stats.html
+++ b/app/templates/bank_accounts/stats.html
@@ -37,6 +37,15 @@
     </div>
 </div>
 
+<div id="cash-flow-table-container-id" class="table-responsive border rounded-3 mt-2" style="height: 185px;">
+    <table id="cash-flow-table-id" class="table table-hover">
+        <thead class="fs-6">
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+</div>
+
 <div class="row align-items-stretch text-center my-2">
     <div class="col-sm d-flex justify-content-center">
         <div class="chart-box">
